deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dpat-aws-microservice-service
spec:
  selector:
    app: dpat-aws-microservice # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
